Fixed form overflow

--- a/grug.css
+++ b/grug.css
@@ -156,6 +156,8 @@ button {
     border-radius: 0.5rem;
     min-width: 0;
     max-width: 100%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 input::placeholder,
